tests/paczka2/big_fuzzy/21359853.err
Error in line 1: A244 A91 62,0
Error in line 4: A244 A244 98,4
Error in line 5: A244 S78 80,6
Error in line 8: A244 A244 42,4
Error in line 3: ztucGX8Z8Pu A244 11,4
Error in line 15: T2pI 91 58,9
Error in line 12: T2pI A244 15,8
Error in line 11: ztucGX8Z8Pu A91 40,6
Error in line 17: T2pI A91 131,3
Error in line 44: ztucGX8Z8Pu S78 97,4
Error in line 54: CfciaWV5B4 A91 70,4
Error in line 53: TwN S78 14,1
Error in line 58: TwN A371 78,8
Error in line 67: TwN A371 65,6
Error in line 63: A244 A91 41,7
Error in line 69: ztucGX8Z8Pu A91 23,6
Error in line 78: TwN A91 86,3
Error in line 85: ztucGX8Z8Pu A244 32,3
Error in line 89: CfciaWV5B4 S78 -3,3
Error in line 91: A244 A371 1,9
Error in line 98: OCXR S78 96,6
Error in line 99: ztucGX8Z8Pu A371 33,4
Error in line 100: OCXR A91 28,1
Error in line 121: CfciaWV5B4 S78 3,3
Error in line 130: OCXR A371 51,2
Error in line 143: SuGdYyRRii A244 93,6
Error in line 152: TwN A91 69,8
Error in line 158: TwN S78 41,9
Error in line 164: ztucGX8Z8Pu A91 6T,5
Error in line 165: T2pI S78 281,8
Error in line 161: SuGdYyRRii S78 45,7
Error in line 187: T2pI A371 91,3
Error in line 186: SuGdYyRRii A371 47,7
Error in line 188: T2pI A244 46,0
Error in line 203: SuGdYyRRii A91 22,8
Error in line 207: SuGdYyRRii S78 84,1
Error in line 209: SuGdYyRRii A244 59,5
Error in line 215: SuGdYyRRii A371 3,9
Error in line 213: ztucGX8Z8Pu S78 68,6
Error in line 217: SuGdYyRRii A91 44,0
Error in line 219: ztucGX8Z8Pu A371 51,4
Error in line 225: ztucGX8Z8Pu A91 15,2
Error in line 226: ztucGX8Z8Pu S78 26,8
Error in line 231: SuGdYyRRii A371 59,3
Error in line 222: TwN A91 69,2
Error in line 233: SuGdYyRRii S78 20,9
Error in line 235: CfciaWV5B4 A244 60,6
